# gitcrypt

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  errors.rs  file_utils.rs  main.rs
